MyQLJava/src/parser/antlr/unqlParser.java
// $ANTLR 3.4 unql.g 2013-09-24 08:07:30

package parser.antlr;

import ast_unql.*;
import ast_unql.binaryexpr.*;
import ast_unql.primaryexpr.*;
import ast_unql.statement.*;
import ast_unql.transaction.*;
import ast_unql.unaryexpr.*;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class unqlParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "All", "Bool", "COMMENT", "Ident", "Int", "Str", "WS", "'!='", "'&&'", "'('", "')'", "'+'", "','", "'-'", "'.'", "'/'", "':'", "';'", "'<'", "'<='", "'<>'", "'=='", "'>'", "'>='", "'BEGIN'", "'BY'", "'COMMIT'", "'CREATE'", "'DELETE'", "'END'", "'EXCEPT'", "'FROM'", "'GROUP'", "'INSERT'", "'INTERSECT'", "'INTO'", "'LIMIT'", "'NOT'", "'OFFSET'", "'ORDER'", "'ROLLBACK'", "'SELECT'", "'UNION ALL'", "'UPDATE'", "'WHERE'", "'{'", "'||'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int All=4;
    public static final int Bool=5;
    public static final int COMMENT=6;
    public static final int Ident=7;
    public static final int Int=8;
    public static final int Str=9;
    public static final int WS=10;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public unqlParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public unqlParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
        this.state.ruleMemo = new HashMap[60+1];
         

    }

    public String[] getTokenNames() { return unqlParser.tokenNames; }
    public String getGrammarFileName() { return "unql.g"; }


        @Override
        public void reportError(RecognitionException e) {
            throw new RuntimeException(e);
        }



    // $ANTLR start "transaction"
    // unql.g:28:1: transaction returns [Transaction result] : ( 'BEGIN' Ident (s= statement )* 'END' EOF | (s= statement )* EOF );
    public final Transaction transaction() throws RecognitionException {
        Transaction result = null;

        int transaction_StartIndex = input.index();

        Token Ident1=null;
        IStatement s =null;


        ArrayList<IStatement> list = new ArrayList<IStatement>(); 
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 1) ) { return result; }

            // unql.g:30:2: ( 'BEGIN' Ident (s= statement )* 'END' EOF | (s= statement )* EOF )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==28) ) {
                alt3=1;
            }
            else if ( (LA3_0==EOF||(LA3_0 >= All && LA3_0 <= Bool)||(LA3_0 >= Ident && LA3_0 <= Str)||LA3_0==13||LA3_0==15||LA3_0==17||(LA3_0 >= 30 && LA3_0 <= 32)||LA3_0==37||LA3_0==41||(LA3_0 >= 44 && LA3_0 <= 45)||LA3_0==47) ) {
                alt3=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // unql.g:30:4: 'BEGIN' Ident (s= statement )* 'END' EOF
                    {
                    match(input,28,FOLLOW_28_in_transaction60); if (state.failed) return result;

                    Ident1=(Token)match(input,Ident,FOLLOW_Ident_in_transaction62); if (state.failed) return result;

                    // unql.g:30:18: (s= statement )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( ((LA1_0 >= All && LA1_0 <= Bool)||(LA1_0 >= Ident && LA1_0 <= Str)||LA1_0==13||LA1_0==15||LA1_0==17||(LA1_0 >= 30 && LA1_0 <= 32)||LA1_0==37||LA1_0==41||(LA1_0 >= 44 && LA1_0 <= 45)||LA1_0==47) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // unql.g:30:19: s= statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_transaction67);
                    	    s=statement();

                    	    state._fsp--;
                    	    if (state.failed) return result;

                    	    if ( state.backtracking==0 ) {list.add(s);}

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    match(input,33,FOLLOW_33_in_transaction73); if (state.failed) return result;

                    match(input,EOF,FOLLOW_EOF_in_transaction75); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Transactions(list, new Ident((Ident1!=null?Ident1.getText():null))); }

                    }
                    break;
                case 2 :
                    // unql.g:31:4: (s= statement )* EOF
                    {
                    // unql.g:31:4: (s= statement )*
                    loop2:
                    do {
                        int alt2=2;
                        int LA2_0 = input.LA(1);

                        if ( ((LA2_0 >= All && LA2_0 <= Bool)||(LA2_0 >= Ident && LA2_0 <= Str)||LA2_0==13||LA2_0==15||LA2_0==17||(LA2_0 >= 30 && LA2_0 <= 32)||LA2_0==37||LA2_0==41||(LA2_0 >= 44 && LA2_0 <= 45)||LA2_0==47) ) {
                            alt2=1;
                        }


                        switch (alt2) {
                    	case 1 :
                    	    // unql.g:31:5: s= statement
                    	    {
                    	    pushFollow(FOLLOW_statement_in_transaction85);
                    	    s=statement();

                    	    state._fsp--;
                    	    if (state.failed) return result;

                    	    if ( state.backtracking==0 ) {list.add(s);}

                    	    }
                    	    break;

                    	default :
                    	    break loop2;
                        }
                    } while (true);


                    match(input,EOF,FOLLOW_EOF_in_transaction91); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new StatementList(list); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 1, transaction_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "transaction"



    // $ANTLR start "statement"
    // unql.g:34:1: statement returns [IStatement result] : (s= select (op= ( 'UNION ALL' | 'INTERSECT' | 'EXCEPT' ) sel= select )* | 'CREATE' e= expr ';' | 'INSERT' 'INTO' e= expr ';' | 'UPDATE' e= expr ';' | 'DELETE' e= expr ';' | 'COMMIT' i= ident ';' | 'ROLLBACK' i= ident ';' |e= expr ';' );
    public final IStatement statement() throws RecognitionException {
        IStatement result = null;

        int statement_StartIndex = input.index();

        Token op=null;
        Select s =null;

        Select sel =null;

        Expr e =null;

        Ident i =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 2) ) { return result; }

            // unql.g:35:2: (s= select (op= ( 'UNION ALL' | 'INTERSECT' | 'EXCEPT' ) sel= select )* | 'CREATE' e= expr ';' | 'INSERT' 'INTO' e= expr ';' | 'UPDATE' e= expr ';' | 'DELETE' e= expr ';' | 'COMMIT' i= ident ';' | 'ROLLBACK' i= ident ';' |e= expr ';' )
            int alt5=8;
            switch ( input.LA(1) ) {
            case 45:
                {
                alt5=1;
                }
                break;
            case 31:
                {
                alt5=2;
                }
                break;
            case 37:
                {
                alt5=3;
                }
                break;
            case 47:
                {
                alt5=4;
                }
                break;
            case 32:
                {
                alt5=5;
                }
                break;
            case 30:
                {
                alt5=6;
                }
                break;
            case 44:
                {
                alt5=7;
                }
                break;
            case All:
            case Bool:
            case Ident:
            case Int:
            case Str:
            case 13:
            case 15:
            case 17:
            case 41:
                {
                alt5=8;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // unql.g:35:4: s= select (op= ( 'UNION ALL' | 'INTERSECT' | 'EXCEPT' ) sel= select )*
                    {
                    pushFollow(FOLLOW_select_in_statement111);
                    s=select();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = s; }

                    // unql.g:35:38: (op= ( 'UNION ALL' | 'INTERSECT' | 'EXCEPT' ) sel= select )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==34||LA4_0==38||LA4_0==46) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // unql.g:35:39: op= ( 'UNION ALL' | 'INTERSECT' | 'EXCEPT' ) sel= select
                    	    {
                    	    op=(Token)input.LT(1);

                    	    if ( input.LA(1)==34||input.LA(1)==38||input.LA(1)==46 ) {
                    	        input.consume();
                    	        state.errorRecovery=false;
                    	        state.failed=false;
                    	    }
                    	    else {
                    	        if (state.backtracking>0) {state.failed=true; return result;}
                    	        MismatchedSetException mse = new MismatchedSetException(null,input);
                    	        throw mse;
                    	    }


                    	    pushFollow(FOLLOW_select_in_statement128);
                    	    sel=select();

                    	    state._fsp--;
                    	    if (state.failed) return result;

                    	    if ( state.backtracking==0 ) { result = new Compound(result,sel,(op!=null?op.getText():null)); }

                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);


                    }
                    break;
                case 2 :
                    // unql.g:36:4: 'CREATE' e= expr ';'
                    {
                    match(input,31,FOLLOW_31_in_statement137); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_statement141);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement143); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Create(e); }

                    }
                    break;
                case 3 :
                    // unql.g:37:4: 'INSERT' 'INTO' e= expr ';'
                    {
                    match(input,37,FOLLOW_37_in_statement150); if (state.failed) return result;

                    match(input,39,FOLLOW_39_in_statement152); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_statement156);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement158); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Insert(e); }

                    }
                    break;
                case 4 :
                    // unql.g:38:4: 'UPDATE' e= expr ';'
                    {
                    match(input,47,FOLLOW_47_in_statement165); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_statement169);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement171); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Update(e); }

                    }
                    break;
                case 5 :
                    // unql.g:39:4: 'DELETE' e= expr ';'
                    {
                    match(input,32,FOLLOW_32_in_statement178); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_statement182);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement184); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Delete(e); }

                    }
                    break;
                case 6 :
                    // unql.g:40:4: 'COMMIT' i= ident ';'
                    {
                    match(input,30,FOLLOW_30_in_statement191); if (state.failed) return result;

                    pushFollow(FOLLOW_ident_in_statement195);
                    i=ident();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement197); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Commit(i); }

                    }
                    break;
                case 7 :
                    // unql.g:41:4: 'ROLLBACK' i= ident ';'
                    {
                    match(input,44,FOLLOW_44_in_statement204); if (state.failed) return result;

                    pushFollow(FOLLOW_ident_in_statement208);
                    i=ident();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement210); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Rollback(i); }

                    }
                    break;
                case 8 :
                    // unql.g:42:4: e= expr ';'
                    {
                    pushFollow(FOLLOW_expr_in_statement219);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,21,FOLLOW_21_in_statement221); if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = e; }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 2, statement_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "statement"



    // $ANTLR start "select"
    // unql.g:45:1: select returns [Select result] : 'SELECT' s= selectClause 'FROM' n= Ident (se= selectElements )* ';' ;
    public final Select select() throws RecognitionException {
        Select result = null;

        int select_StartIndex = input.index();

        Token n=null;
        SelectClause s =null;

        ISelectElement se =null;


        ArrayList<ISelectElement> list = new ArrayList<ISelectElement>(); 
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 3) ) { return result; }

            // unql.g:47:2: ( 'SELECT' s= selectClause 'FROM' n= Ident (se= selectElements )* ';' )
            // unql.g:47:3: 'SELECT' s= selectClause 'FROM' n= Ident (se= selectElements )* ';'
            {
            match(input,45,FOLLOW_45_in_select244); if (state.failed) return result;

            pushFollow(FOLLOW_selectClause_in_select248);
            s=selectClause();

            state._fsp--;
            if (state.failed) return result;

            match(input,35,FOLLOW_35_in_select250); if (state.failed) return result;

            n=(Token)match(input,Ident,FOLLOW_Ident_in_select254); if (state.failed) return result;

            // unql.g:47:42: (se= selectElements )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==36||LA6_0==40||(LA6_0 >= 42 && LA6_0 <= 43)||LA6_0==48) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // unql.g:47:43: se= selectElements
            	    {
            	    pushFollow(FOLLOW_selectElements_in_select259);
            	    se=selectElements();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { list.add(se); }

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);


            match(input,21,FOLLOW_21_in_select265); if (state.failed) return result;

            if ( state.backtracking==0 ) { result = new Select(s, new Ident((n!=null?n.getText():null)), list); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 3, select_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "select"



    // $ANTLR start "selectElements"
    // unql.g:50:1: selectElements returns [ISelectElement result] : ( 'WHERE' e= expr | 'GROUP' 'BY' s= selectClause | 'ORDER' 'BY' s= selectClause | 'LIMIT' e= expr | 'OFFSET' e= expr );
    public final ISelectElement selectElements() throws RecognitionException {
        ISelectElement result = null;

        int selectElements_StartIndex = input.index();

        Expr e =null;

        SelectClause s =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 4) ) { return result; }

            // unql.g:51:2: ( 'WHERE' e= expr | 'GROUP' 'BY' s= selectClause | 'ORDER' 'BY' s= selectClause | 'LIMIT' e= expr | 'OFFSET' e= expr )
            int alt7=5;
            switch ( input.LA(1) ) {
            case 48:
                {
                alt7=1;
                }
                break;
            case 36:
                {
                alt7=2;
                }
                break;
            case 43:
                {
                alt7=3;
                }
                break;
            case 40:
                {
                alt7=4;
                }
                break;
            case 42:
                {
                alt7=5;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;

            }

            switch (alt7) {
                case 1 :
                    // unql.g:51:4: 'WHERE' e= expr
                    {
                    match(input,48,FOLLOW_48_in_selectElements283); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_selectElements287);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Where(e); }

                    }
                    break;
                case 2 :
                    // unql.g:52:4: 'GROUP' 'BY' s= selectClause
                    {
                    match(input,36,FOLLOW_36_in_selectElements294); if (state.failed) return result;

                    match(input,29,FOLLOW_29_in_selectElements296); if (state.failed) return result;

                    pushFollow(FOLLOW_selectClause_in_selectElements300);
                    s=selectClause();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Group(s); }

                    }
                    break;
                case 3 :
                    // unql.g:53:4: 'ORDER' 'BY' s= selectClause
                    {
                    match(input,43,FOLLOW_43_in_selectElements307); if (state.failed) return result;

                    match(input,29,FOLLOW_29_in_selectElements309); if (state.failed) return result;

                    pushFollow(FOLLOW_selectClause_in_selectElements313);
                    s=selectClause();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Order(s); }

                    }
                    break;
                case 4 :
                    // unql.g:54:4: 'LIMIT' e= expr
                    {
                    match(input,40,FOLLOW_40_in_selectElements320); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_selectElements324);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Limit(e); }

                    }
                    break;
                case 5 :
                    // unql.g:55:4: 'OFFSET' e= expr
                    {
                    match(input,42,FOLLOW_42_in_selectElements331); if (state.failed) return result;

                    pushFollow(FOLLOW_expr_in_selectElements335);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { result = new Offset(e); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 4, selectElements_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "selectElements"



    // $ANTLR start "selectClause"
    // unql.g:58:1: selectClause returns [SelectClause result] : ( '{' j= json '}' | '(' s= select ')' |e= expr ( ',' sel= selectClause )* );
    public final SelectClause selectClause() throws RecognitionException {
        SelectClause result = null;

        int selectClause_StartIndex = input.index();

        JSONObject j =null;

        Select s =null;

        Expr e =null;

        SelectClause sel =null;


        ArrayList<IStatement> list = new ArrayList<IStatement>(); 
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 5) ) { return result; }

            // unql.g:60:2: ( '{' j= json '}' | '(' s= select ')' |e= expr ( ',' sel= selectClause )* )
            int alt9=3;
            switch ( input.LA(1) ) {
            case 49:
                {
                alt9=1;
                }
                break;
            case 13:
                {
                int LA9_2 = input.LA(2);

                if ( (LA9_2==45) ) {
                    alt9=2;
                }
                else if ( ((LA9_2 >= All && LA9_2 <= Bool)||(LA9_2 >= Ident && LA9_2 <= Str)||LA9_2==13||LA9_2==15||LA9_2==17||LA9_2==41) ) {
                    alt9=3;
                }
                else {
                    if (state.backtracking>0) {state.failed=true; return result;}
                    NoViableAltException nvae =
                        new NoViableAltException("", 9, 2, input);

                    throw nvae;

                }
                }
                break;
            case All:
            case Bool:
            case Ident:
            case Int:
            case Str:
            case 15:
            case 17:
            case 41:
                {
                alt9=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return result;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;

            }

            switch (alt9) {
                case 1 :
                    // unql.g:60:4: '{' j= json '}'
                    {
                    match(input,49,FOLLOW_49_in_selectClause358); if (state.failed) return result;

                    pushFollow(FOLLOW_json_in_selectClause362);
                    j=json();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,51,FOLLOW_51_in_selectClause364); if (state.failed) return result;

                    if ( state.backtracking==0 ) { list.add(j); result = new SelectClause(list); }

                    }
                    break;
                case 2 :
                    // unql.g:61:4: '(' s= select ')'
                    {
                    match(input,13,FOLLOW_13_in_selectClause371); if (state.failed) return result;

                    pushFollow(FOLLOW_select_in_selectClause375);
                    s=select();

                    state._fsp--;
                    if (state.failed) return result;

                    match(input,14,FOLLOW_14_in_selectClause377); if (state.failed) return result;

                    if ( state.backtracking==0 ) { list.add(s); result = new SelectClause(list); }

                    }
                    break;
                case 3 :
                    // unql.g:62:4: e= expr ( ',' sel= selectClause )*
                    {
                    pushFollow(FOLLOW_expr_in_selectClause386);
                    e=expr();

                    state._fsp--;
                    if (state.failed) return result;

                    if ( state.backtracking==0 ) { list.add(e); }

                    // unql.g:62:36: ( ',' sel= selectClause )*
                    loop8:
                    do {
                        int alt8=2;
                        int LA8_0 = input.LA(1);

                        if ( (LA8_0==16) ) {
                            int LA8_2 = input.LA(2);

                            if ( (synpred21_unql()) ) {
                                alt8=1;
                            }


                        }


                        switch (alt8) {
                    	case 1 :
                    	    // unql.g:62:37: ',' sel= selectClause
                    	    {
                    	    match(input,16,FOLLOW_16_in_selectClause391); if (state.failed) return result;

                    	    pushFollow(FOLLOW_selectClause_in_selectClause395);
                    	    sel=selectClause();

                    	    state._fsp--;
                    	    if (state.failed) return result;

                    	    if ( state.backtracking==0 ) { list.addAll(sel.getList()); }

                    	    }
                    	    break;

                    	default :
                    	    break loop8;
                        }
                    } while (true);


                    if ( state.backtracking==0 ) { result = new SelectClause(list); }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 5, selectClause_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "selectClause"



    // $ANTLR start "json"
    // unql.g:65:1: json returns [JSONObject result] : (j= jsonpair )* ;
    public final JSONObject json() throws RecognitionException {
        JSONObject result = null;

        int json_StartIndex = input.index();

        JSONPair j =null;


        ArrayList<JSONPair> list = new ArrayList<JSONPair>(); 
        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 6) ) { return result; }

            // unql.g:67:2: ( (j= jsonpair )* )
            // unql.g:67:5: (j= jsonpair )*
            {
            // unql.g:67:5: (j= jsonpair )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==Ident) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // unql.g:67:6: j= jsonpair
            	    {
            	    pushFollow(FOLLOW_jsonpair_in_json428);
            	    j=jsonpair();

            	    state._fsp--;
            	    if (state.failed) return result;

            	    if ( state.backtracking==0 ) { list.add(j); }

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            if ( state.backtracking==0 ) { result = new JSONObject(list); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 6, json_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "json"



    // $ANTLR start "jsonpair"
    // unql.g:70:1: jsonpair returns [JSONPair result] : i= ident ':' e= expr ;
    public final JSONPair jsonpair() throws RecognitionException {
        JSONPair result = null;

        int jsonpair_StartIndex = input.index();

        Ident i =null;

        Expr e =null;


        try {
            if ( state.backtracking>0 && alreadyParsedRule(input, 7) ) { return result; }

            // unql.g:71:2: (i= ident ':' e= expr )
            // unql.g:71:4: i= ident ':' e= expr
            {
            pushFollow(FOLLOW_ident_in_jsonpair452);
            i=ident();

            state._fsp--;
            if (state.failed) return result;

            match(input,20,FOLLOW_20_in_jsonpair454); if (state.failed) return result;

            pushFollow(FOLLOW_expr_in_jsonpair458);
            e=expr();

            state._fsp--;
            if (state.failed) return result;

            if ( state.backtracking==0 ) { result = new JSONPair(i,e); }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
            if ( state.backtracking>0 ) { memoize(input, 7, jsonpair_StartIndex); }

        }
        return result;
    }
    // $ANTLR end "jsonpair"



    // $ANTLR start "expr"
    // unql.g:74:1: expr returns [Expr result] : l= andExpr ;
    public final Expr expr() throws RecognitionException {
        Expr result = null;
